--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="js/1.js"></script>
 </head>
 <body>
-    <h2>正式页</h2>
+    <h2>冬天到了</h2>
 </body>
 </html>
